# Death-App

./: .gitignore  README.md  main.py  pyproject.toml  settings.toml
death_app/data/: data_api_downloader.py  data_loader.py  data_preprocessing_pipeline.py  data_validator.py  download_data.py  downloader.py  new_data_pipeline.py  preprocess.py  processor.py
death_app/plots/: plotter.py
death_app/user_interface/: user_interface.py
tests/: test_ablaszak_death_app.py  test_data_api_downloader.py  test_data_loader.py  test_data_preprocessing.py  test_data_validator.py  test_downloader.py  test_plotter.py  test_processor.py
