[tool.poetry]
name = "death-app"
version = "0.1.0"
description = ""
authors = ["Agulaa <agnieszka.rusin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dynaconf = "^3.1.9"
pandas = "^1.4.3"
numpy = "^1.23.2"
pytest = "^7.1.2"
streamlit = "^1.12.0"
matplotlib = "^3.5.3"
gdown = "^4.5.1"
plotly = "^5.10.0"
kaleido = "^0.2.1"
platformdirs = "^2.5.2"
wbgapi = "^1.1.2"
selenium = "^4.4.0"

[tool.poetry.dev-dependencies]
poethepoet = "^0.16.0"
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
